<resources>
    <string name="app_name">Vendas</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="age">Idade</string>
    <string name="man">Homem</string>
    <string name="woman">Mulher</string>
    <string name="other">Outro</string>
    <string name="save">Salvar</string>
    <string name="home_hello">Olá, %s</string>
    <string name="home_new_transaction">Nova compra</string>
    <string name="home_bank_balance">R$ 0,00</string>
    <string name="home_balance_available">Saldo disponivel</string>
    <string name="home_next_invoice">Próxima fatura</string>
    <string name="novo_por_aqui">Novo por aqui?</string>
    <string name="registrar">Registrar</string>
    <string name="back">Back</string>
    <string name="name_account">Name Account</string>
    <string name="account_balance">Account Balance</string>
    <string name="name_user">Name User</string>
    <string name="debito">Débito</string>
    <string name="credito">Crédito</string>
    <string name="nova_transacao">Nova Transação</string>
    <string name="transacoes">Transaçôes</string>
    <string name="deposito">Depósito</string>
    <string name="saque">Saque</string>
</resources>